app/assets/stylesheets/sidekiq/monitor/jobs_table.css.sass
div.dataTables_length label
  float: right

.jobs-table-wrapper
  clear: both

.jobs-table-wrapper .status-value
  text-transform: capitalize

.jobs-table-wrapper .status-filter
  float: left
  margin-right: 15px

.jobs-table-wrapper .dataTables_filter > label
  float: left

.jobs-table-wrapper .dataTables_filter > label > input
  width: 120px

.queue-stats
  float: right
  font-size: 12px
  margin-left: 10px

.queue-stats:after
  content: "."
  display: block
  height: 0
  clear: both
  visibility: hidden

.queue-stats table
  margin-bottom: 10px

.queue-stats th,
.queue-stats td
  padding: 0 5px
  text-align: center

.queue-stats th
  text-transform: capitalize
  font-weight: normal

.queue-stats td
  font-weight: bold

